change bg image

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
- background: url('img/bbbbb.jpg');
+ background: url('img/bluegray.jpg');
  background-size: cover;
  background-position: center;
 
